--- a/GoodHabbits/app/src/main/AndroidManifest.xml
+++ b/GoodHabbits/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoodHabbits">
         <activity
+            android:name=".MeditationActitivy"
+            android:exported="false" />
+        <activity
             android:name=".SleepActivity"
             android:exported="false" />
         <activity
