--- a/GoodHabbits/app/src/main/AndroidManifest.xml
+++ b/GoodHabbits/app/src/main/AndroidManifest.xml
@@ -8,7 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GoodHabbits">
+        android:theme="@style/Theme.GoodHabbits.NoActionBar">
+        <activity
+            android:name=".WaterDateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WaterListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WaterActivity"
+            android:exported="false" />
         <activity
             android:name=".MeditationActitivy"
             android:exported="false" />
@@ -24,6 +33,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
