Home button and save data if app closes while tracking sleep
Added if statement in Mainactivity and StartActivity removed!

--- a/GoodHabbits/app/src/main/AndroidManifest.xml
+++ b/GoodHabbits/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:exported="false"
             />
         <activity android:name=".night_activity"
+            android:exported="false"
+            />
+        <activity android:name=".stat_activity"
+            android:exported="false"
             />
         <activity
             android:name=".MainActivity"
