set bedtime goal countdown added but needs to be fixed
Set bedtime goal is almost done and need to be fixed

--- a/GoodHabbits/app/src/main/AndroidManifest.xml
+++ b/GoodHabbits/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".stat_activity"
             android:exported="false"
             />
+        <activity android:name=".bedtime_activity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
