--- a/GoodHabbits/app/build.gradle
+++ b/GoodHabbits/app/build.gradle
@@ -39,4 +39,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    compileOnly files("C:/Users/Gerppuli/AppData/Local/Android/Sdk/platforms/android-32/android.jar")
+}
+
+android.applicationVariants.all { variant ->
+    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+        description "Generates Javadoc for $variant.name."
+
+        source = variant.javaCompileProvider.get().source
+        destinationDir = file("$rootDir/javadoc/")
+        failOnError false
+
+        doFirst {
+            ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+            classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+            options.links('https://developer.android.com/reference/', 'https://d.android.com/reference/androidx/')
+        }
+    }
 }
